feat: check logic
